--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@ SOFTWARE.
 <head>
 </head>
 <body>
-	<a href="https://katonobu.github.io/web-serial-utility/service/index.html" シリアルサービス></a>
-	<a href="https://katonobu.github.io/web-serial-utility/controller/index.html" コントローラ></a>
+    <p>
+    <a href="https://katonobu.github.io/web-serial-utility/service/index.html"> シリアルサービス</a>
+    </p>
+    <p>
+	<a href="https://katonobu.github.io/web-serial-utility/controller/index.html"> コントローラ</a>
+    </p>
 </body>
 </html>
